SLING-12880 Update Sling Mocks to Sling API 3